--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,35 @@
 name: Release
+
 on:
-  workflow_call:
-    secrets:
-      NPM_TOKEN:
-        required: true
+  push:
+    tags:
+      - v*
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
-      - name: Checkout
+      - name: Checkout Repo
         uses: actions/checkout@v3
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          fetch-depth: 0
+          version: latest
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
-        with:
-          node-version: lts/*
-      - name: Install PNPM
-        run: npm install -g pnpm
-      - name: Install dependencies
-        run: pnpm run ci
+
+      - name: Install Dependencies
+        run: pnpm i
+
       - name: Build
-        run: pnpm run build
-      - name: Test
-        run: pnpm run test
-      - name: Release
-        run: pnpx semantic-release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: pnpm build
+
+      - name: Publish to NPM
+        uses: JS-DevTools/npm-publish@v2
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: ./packages/core/package.json
