--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   ],
   "dependencies": {
     "commander": "^11.1.0",
+    "glob": "^10.3.10",
     "simple-git": "^3.22.0"
   },
   "devDependencies": {
