--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "commander": "^11.1.0",
     "glob": "^10.3.10",
+    "ora": "^8.0.1",
     "simple-git": "^3.22.0"
   },
   "devDependencies": {
